--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@ Dhishna, the technical festival of School Of Engineering, CUSAT is a technical e
 
 <a href="https://www.facebook.com/dhishna.cusat/" class="fa fa-facebook"></a>
 <a href="https://www.instagram.com/dhishna.cusat/?hl=en" class="fa fa-instagram"></a>
-<a href="https://www.youtube.com/channel/UCxa_SzyC6Ylv2M19RGVCArg" class="fa fa-youtube">
+<a href="https://www.youtube.com/channel/UCxa_SzyC6Ylv2M19RGVCArg" class="fa fa-youtube"></a>
 ...
 			<p>
 				&copy; 2020 by team ABZL &amp; Cochin University Of Science And Technology All rights reserved.
