--- a/contact.html
+++ b/contact.html
@@ -7,11 +7,15 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css">
 	<script type='text/javascript' src='js/mobile.js'></script>
+	<!-- Add icon library -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 	<div id="header">
 		<div id="header">
-			<h1><a href="https://dhishna.org/">DISHNA CUSAT <span>TECH FEST</span></a></h1>
+			<h1>
+				<a href="https://dhishna.org/">DISHNA CUSAT <span>TECH FEST</span></a>
+			</h1>
 	
 		
 		<ul id="navigation">
@@ -21,8 +25,7 @@
 			</li>
 			
 					<li>
-						<a
-				<a href="contact.html">Contact</a>
+						<a href="contact.html">Contact</a>
 			</li>
 			
 		</ul>
@@ -43,36 +46,44 @@
 				<span>Description</span>
 				<textarea name="Description" id="message" cols="30" rows="10"></textarea>
 			</label>
-			</label>
+			</label><br>
 			<label>
-			<select>
-                <option value="open">open</option>
-                <option value="close">close</option>
-                
-              </select><br>
+				<span>
+					Is registration open?
+				</span>
+				<select>
+					<option value="open">open</option>
+					<option value="close">close</option>
+				</select><br>
 			</label>
-			<H3>cordinator:</H3>
+			<H3>Cordinator:</H3>
 			<label for="name">
 				<span>Name</span>
 				<input type="text" id="name">
 			</label>
 			<label for="phone number">
-				<span>phone number</span>
+				<span>Phone number</span>
 				<input type="text" id="phone">
-			</label>
-
+			</label><br>
+			<label for="Image">
+				<span>Image</span>
+				<input type="file" name="pic" accept="image/*" id="imgInp" onchange="previewFile()">
+				<img id="preview" src="" alt="your image" height="auto" width="97.5%" style="display: none;">
+			</label><br>
 			<input type="submit" id="submit" value="submit">
 		</form>
 	</div>
 	<div id="footer">
 		<div>
-			<span>CUSAT,kalamassery,kochi| 9744416508</span>
+			<span>CUSAT, Kalamassery, Kochi | 9744416508</span>
 			<p>
 				&copy; 2020 by team ABZL &amp; Cochin University Of Science And Technology All rights reserved.
 			</p>
 		</div>
 		<div id="connect">
-			
+			<a href="https://www.facebook.com/dhishna.cusat/"></a>
+			<a href="https://www.youtube.com/channel/UCxa_SzyC6Ylv2M19RGVCArg"></a>
+			<a href="https://www.instagram.com/dhishna.cusat/"></a>
 		</div>
 	</div>	
 </body>
