--- a/about.html
+++ b/about.html
@@ -52,7 +52,14 @@
 	</div>
 	<div id="footer">
 		<div>
-			<span>CUSAT,kalamassery,kochi| 9744416508</span>
+			<span>CUSAT, Kalamassery, Kochi | 9744416508</span>
+
+			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+			<a href="https://www.facebook.com/dhishna.cusat/" class="fa fa-facebook"></a>
+			<a href="https://www.instagram.com/dhishna.cusat/?hl=en" class="fa fa-instagram"></a>
+			<a href="https://www.youtube.com/channel/UCxa_SzyC6Ylv2M19RGVCArg" class="fa fa-youtube"></a>
+
 			<p>
 				&copy; 2020 by team ABZL &amp; Cochin University Of Science And Technology All rights reserved.
 			</p>
