--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
 			<label for="Image">
 				<span>Image</span>
 				<input type="file" name="pic" accept="image/*" id="imgInp" onchange="previewFile()">
-				<img id="preview" src="" alt="your image" height="auto" width="97.5%" style="display: none;">
+				<img id="preview" src="" alt="your image" height="auto" width="448px" style="display: none;">
 			</label><br>
 			<input type="submit" id="submit" value="submit">
 		</form>
@@ -76,14 +76,19 @@
 	<div id="footer">
 		<div>
 			<span>CUSAT, Kalamassery, Kochi | 9744416508</span>
+
+			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+			<a href="https://www.facebook.com/dhishna.cusat/" class="fa fa-facebook"></a>
+			<a href="https://www.instagram.com/dhishna.cusat/?hl=en" class="fa fa-instagram"></a>
+			<a href="https://www.youtube.com/channel/UCxa_SzyC6Ylv2M19RGVCArg" class="fa fa-youtube"></a>
+
 			<p>
 				&copy; 2020 by team ABZL &amp; Cochin University Of Science And Technology All rights reserved.
 			</p>
 		</div>
 		<div id="connect">
-			<a href="https://www.facebook.com/dhishna.cusat/"></a>
-			<a href="https://www.youtube.com/channel/UCxa_SzyC6Ylv2M19RGVCArg"></a>
-			<a href="https://www.instagram.com/dhishna.cusat/"></a>
+			
 		</div>
 	</div>	
 </body>
