--- a/Register for events.html
+++ b/Register for events.html
@@ -1,9 +1,9 @@
 
-<html>
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="user-scalable=0, width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<title>dishna &amp; cusats</title>
+	<title>Contact  </title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css">
 	<script type='text/javascript' src='js/mobile.js'></script>
@@ -12,53 +12,76 @@
 </head>
 <body>
 	<div id="header">
-		<h1><a href="https://dhishna.org/">DISHNA CUSAT <span>TECH FEST</span></a></h1>
+		<div id="header">
+			<h1>
+				<a href="https://dhishna.org/">DISHNA CUSAT <span>TECH FEST</span></a>
+			</h1>
+	
+		
 		<ul id="navigation">
 			
-			<li class="current">
+			<li>
 				<a href="about.html">About</a>
 			</li>
 			
-			<li>
-				<a href="Register for events.html">Register for events</a>
+					<li>
+						<a href="contact.html">Contact</a>
 			</li>
 			
 		</ul>
 	</div>
 	<div id="body">
-		<h2>About</h2>
-		<div class="content">
-			<img src="dishna.jpg" alt="logo" class="figure">
-			<div id="abtPara">
-				DHISHNA
-				Coming together is a beginning; keeping together is progress; working together is success.
-				INFINITE ODYSSEY
-				Dhishna, the technical festival of School Of Engineering, CUSAT is a technical extravaganza which plays host to students from all over india.
-				A myriad of events, mind boggling games, a cornucopia of challenges and competitions, exciting prizes and above all, an adventure that shouldn’t be missed!
-				The 7 specialized branches of SOE, CUSAT merge together their talents, resources and hard work, the building blocks for Dhishna.
-				Dhishna has its origin from Xplendor, the annual tech-fest of SOE, CUSAT held in 2010. From technical workshops to techniques, 
-				from hackathons to musical nights, Xplendor touched all spheres of a student’s life. Although the first of its kind, 
-				it opened gateways for students to showcase their technical skills and talents. Breaking the barriers set by the conventional system of education, 
-				Dhishna stands one step ahead into the future. Dhishna gives ‘learning’ a whole new meaning, with tech-talks, seminars, hands-on training and live and
-				video conferences with eminent people in the industry, and aims to establish a culture built on organisational values, processes and practices that
-				will greatly encourage an individual to take great leaps in knowledge. We aim not only to describe the positive impacts and enlighten the society and
-				the future but to also pave the path to achieve this. We aim to honour every technological marvel brought about our way,
-				and to encourage all the young minds out there to come up with great ideas and create a better world out here!
-			</div>
-			
-		</div>
-		
-		
+		<h2>Contact</h2>
+		<form action="index.html">
+			<h3>Inquiries</h3>
+			<label for="name">
+				<span>Name</span>
+				<input type="text" id="name">
+			</label>
+			<label for="caption">
+				<span>Caption</span>
+				<input type="text" id="Caption">
+			</label>
+			<label for="Description">
+				<span>Description</span>
+				<textarea name="Description" id="message" cols="30" rows="10"></textarea>
+			</label>
+			</label><br>
+			<label>
+				<span>
+					Is registration open?
+				</span>
+				<select>
+					<option value="open">open</option>
+					<option value="close">close</option>
+				</select><br>
+			</label>
+			<H3>Cordinator:</H3>
+			<label for="name">
+				<span>Name</span>
+				<input type="text" id="name">
+			</label>
+			<label for="phone number">
+				<span>Phone number</span>
+				<input type="text" id="phone">
+			</label><br>
+			<label for="Image">
+				<span>Image</span>
+				<input type="file" name="pic" accept="image/*" id="imgInp" onchange="previewFile()">
+				<img id="preview" src="" alt="your image" height="auto" width="448px" style="display: none;">
+			</label><br>
+			<input type="submit" id="submit" value="submit">
+		</form>
 	</div>
 	<div id="footer">
 		<div>
-			<span>CUSAT,kalamassery,kochi| 9744416508</span>
+			<span>CUSAT, Kalamassery, Kochi | 9744416508</span>
+
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-
-<a href="https://www.facebook.com/dhishna.cusat/" class="fa fa-facebook fa-2x"></a>
-<a href="https://www.instagram.com/dhishna.cusat/?hl=en" class="fa fa-instagram fa-2x"></a>
-<a href="https://www.youtube.com/channel/UCxa_SzyC6Ylv2M19RGVCArg" class="fa fa-youtube fa-2x"></a>
+			<a href="https://www.facebook.com/dhishna.cusat/" class="fa fa-facebook"></a>
+			<a href="https://www.instagram.com/dhishna.cusat/?hl=en" class="fa fa-instagram"></a>
+			<a href="https://www.youtube.com/channel/UCxa_SzyC6Ylv2M19RGVCArg" class="fa fa-youtube"></a>
 
 			<p>
 				&copy; 2020 by team ABZL &amp; Cochin University Of Science And Technology All rights reserved.
@@ -67,6 +90,6 @@
 		<div id="connect">
 			
 		</div>
-	</div>
+	</div>	
 </body>
 </html>
