--- a/about.html
+++ b/about.html
@@ -1,4 +1,3 @@
-
 <html>
 <head>
 	<meta charset="UTF-8">
@@ -20,7 +19,7 @@
 			</li>
 			
 			<li>
-				<a href="contact.html">Contact</a>
+				<a href="Register for events.html">Contact</a>
 			</li>
 			
 		</ul>
@@ -70,3 +69,4 @@
 	</div>
 </body>
 </html>
+
