--- a/Register for events.html
+++ b/Register for events.html
@@ -1,9 +1,8 @@
-
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="user-scalable=0, width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<title>Contact  </title>
+	<title>register for events  </title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css">
 	<script type='text/javascript' src='js/mobile.js'></script>
@@ -93,3 +92,4 @@
 	</div>	
 </body>
 </html>
+
