Fixed Navigation links

--- a/Register for events.html
+++ b/Register for events.html
@@ -23,8 +23,8 @@
 				<a href="about.html">About</a>
 			</li>
 			
-					<li>
-						<a href="contact.html">Contact</a>
+			<li>
+				<a href="Register for events.html">Register for Events</a>
 			</li>
 			
 		</ul>
