Update Register for events.html

--- a/Register for events.html
+++ b/Register for events.html
@@ -24,7 +24,7 @@
 			</li>
 			
 					<li>
-						<a href="contact.html">Contact</a>
+						<a href="Register for events.html">Contact</a>
 			</li>
 			
 		</ul>
