Fixed navigation links

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 			</li>
 			
 			<li>
-				<a href="Register for events.html">Contact</a>
+				<a href="Register for events.html">Register for Events</a>
 			</li>
 			
 		</ul>
